<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <Button
    android:id="@+id/btnRightLeft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:text="@string/right_left"
    app:layout_constraintStart_toEndOf="@+id/btnLeftRight"
    app:layout_constraintTop_toTopOf="@+id/btnLeftRight" />

  <Button
    android:id="@+id/btnFadeInOut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fade_in_out"
    app:layout_constraintBaseline_toBaselineOf="@+id/btnFadeOut"
    app:layout_constraintEnd_toEndOf="@+id/btnZoomOut"
    app:layout_constraintStart_toStartOf="@+id/btnZoomOut" />

  <Button
    android:id="@+id/btnRotateRight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/rotate_right"
    app:layout_constraintEnd_toEndOf="@+id/textSeekerSpeed"
    app:layout_constraintStart_toStartOf="@+id/textSeekerSpeed"
    app:layout_constraintTop_toBottomOf="@+id/btnFlash" />

  <Button
    android:id="@+id/btnFlash"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/flash"
    app:layout_constraintEnd_toEndOf="@+id/btnRotateRight"
    app:layout_constraintStart_toStartOf="@+id/btnRotateRight"
    app:layout_constraintTop_toBottomOf="@+id/btnTopBottom" />

  <Button
    android:id="@+id/btnZoomOut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/zoom_out"
    app:layout_constraintEnd_toEndOf="@+id/btnTopBottom"
    app:layout_constraintStart_toStartOf="@+id/btnTopBottom"
    app:layout_constraintTop_toBottomOf="@+id/btnFadeInOut" />

  <Button
    android:id="@+id/btnTopBottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/top_bot"
    app:layout_constraintEnd_toEndOf="@+id/btnFlash"
    app:layout_constraintStart_toStartOf="@+id/btnFlash"
    app:layout_constraintTop_toBottomOf="@+id/btnZoomOut" />

  <Button
    android:id="@+id/btnFadeOut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/fade_out"
    app:layout_constraintEnd_toEndOf="@+id/btnRightLeft"
    app:layout_constraintStart_toStartOf="@+id/btnRightLeft"
    app:layout_constraintTop_toBottomOf="@+id/textStatus" />

  <Button
    android:id="@+id/btnFadeIn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="16dp"
    android:text="@string/fade_in"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textStatus" />

  <Button
    android:id="@+id/btnZoomIn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/zoom_in"
    app:layout_constraintEnd_toEndOf="@+id/btnFadeIn"
    app:layout_constraintStart_toStartOf="@+id/btnFadeIn"
    app:layout_constraintTop_toBottomOf="@+id/btnFadeIn" />

  <Button
    android:id="@+id/btnLeftRight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/left_right"
    app:layout_constraintEnd_toEndOf="@+id/btnZoomIn"
    app:layout_constraintStart_toStartOf="@+id/btnZoomIn"
    app:layout_constraintTop_toBottomOf="@+id/btnZoomIn" />

  <Button
    android:id="@+id/btnBounce"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/bounce"
    app:layout_constraintEnd_toEndOf="@+id/btnLeftRight"
    app:layout_constraintStart_toStartOf="@+id/btnLeftRight"
    app:layout_constraintTop_toBottomOf="@+id/btnLeftRight" />

  <Button
    android:id="@+id/btnRotateLeft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/rotate_left"
    app:layout_constraintEnd_toEndOf="@+id/btnBounce"
    app:layout_constraintStart_toStartOf="@+id/btnBounce"
    app:layout_constraintTop_toBottomOf="@+id/btnBounce" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="19dp"
    android:contentDescription="@string/android_icon"
    app:layout_constraintBottom_toTopOf="@+id/textStatus"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@mipmap/ic_launcher"
    tools:ignore="ImageContrastCheck" />

  <SeekBar
    android:id="@+id/seekBarSpeed"
    android:layout_width="208dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="21dp"
    android:layout_marginTop="16dp"
    android:max="5000"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnRotateLeft" />

  <TextView
    android:id="@+id/textStatus"
    android:layout_width="0dp"
    android:layout_height="53dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="145dp"
    android:gravity="center_horizontal"
    android:text="@string/textview"
    android:textSize="40sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textSeekerSpeed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="44dp"
    android:layout_marginStart="43dp"
    android:layout_marginTop="16dp"
    android:text="@string/textview"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/btnRightLeft"
    app:layout_constraintTop_toBottomOf="@+id/btnRotateRight" />
</androidx.constraintlayout.widget.ConstraintLayout>